@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2007,v 1.793 2007/04/12 10:35:33 drochner Exp $
+$NetBSD: CHANGES-2007,v 1.794 2007/04/12 15:10:12 joerg Exp $
 
 Changes to the packages collection and infrastructure in 2007:
 
@@ -1568,3 +1568,9 @@ Changes to the packages collection and infrastructure in 2007:
 	Updated devel/pango to 1.16.2 [drochner 2007-04-12]
 	Updated devel/liboil to 0.3.11 [drochner 2007-04-12]
 	Updated www/jalbum to 7.1 [martti 2007-04-12]
+	Added x11/xsm version 1.0.1 [joerg 2007-04-12]
+	Added x11/rgb version 1.0.1 [joerg 2007-04-12]
+	Added x11/xrefresh version 1.0.2 [joerg 2007-04-12]
+	Added x11/libXprintUtil version 1.0.1 [joerg 2007-04-12]
+	Added x11/xplsprinters version 1.0.1 [joerg 2007-04-12]
+	Added x11/xprehashprinterlist version 1.0.1 [joerg 2007-04-12]
